crux-mir/test/symb_eval/crux/early_fail.good
test early_fail/<DISAMB>::fail1[0]: FAILED
test early_fail/<DISAMB>::fail2[0]: FAILED

failures:

---- early_fail/<DISAMB>::fail1[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   internal: error: in early_fail/<DISAMB>::fail1[0]
[Crux]   panicking::panic_fmt, called from early_fail/<DISAMB>::fail1[0]

---- early_fail/<DISAMB>::fail2[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:38:41: 38:58 !test/symb_eval/crux/early_fail.rs:17:5: 17:29: error: in early_fail/<DISAMB>::fail2[0]
[Crux]   MIR assertion at test/symb_eval/crux/early_fail.rs:17:5:
[Crux]   	x == 0

[Crux] Overall status: Invalid.
